@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 1.40 Not Released
  - Fix skipping @import in comments #121
+ - Improved documentation for assetpack.def and paths #110
  - Can disable Pipe::Reloader from the browser
 
 1.39 2017-01-25T22:39:45+0100
